--- a/index.html
+++ b/index.html
@@ -5,21 +5,35 @@
   <title>Dino Game</title>
   <style>
     body { margin: 0; overflow: hidden; background: #f5f5f5; }
-    canvas { display: block; margin: auto; background: #fff; border: 2px solid #000; }
+    canvas { display: block; margin: auto; background: #fff; border: 2px solid #000; touch-action: none; }
   </style>
 </head>
 <body>
-<canvas id="game" width="800" height="300"></canvas>
+<canvas id="game"></canvas>
 
-<!-- Подключаем Telegram Games SDK -->
+<!-- Telegram SDK -->
 <script src="https://telegram.org/js/games.js"></script>
 
 <script>
 const canvas = document.getElementById("game");
 const ctx = canvas.getContext("2d");
 
+function resizeCanvas() {
+  canvas.width = window.innerWidth;
+  canvas.height = window.innerHeight;
+}
+window.addEventListener("resize", resizeCanvas);
+resizeCanvas();
+
 // Динозавр
-let dino = { x:50, y:250, w:40, h:40, vy:0, jumping:false };
+let dino = { 
+  x:50, 
+  y:canvas.height-80, 
+  w:40, 
+  h:40, 
+  vy:0, 
+  jumping:false 
+};
 let gravity = 0.6;
 let jumpPower = -12;
 
@@ -44,13 +58,16 @@ function update() {
   // Физика динозавра
   dino.y += dino.vy;
   dino.vy += gravity;
-  if (dino.y >= 250) { dino.y = 250; dino.jumping = false; }
+  if (dino.y >= canvas.height-80) { 
+    dino.y = canvas.height-80; 
+    dino.jumping = false; 
+  }
 
   // Создание препятствий
   if (frame % 100 === 0) {
-    obstacles.push({ x:800, y:260, w:20, h:40 });
+    obstacles.push({ x:canvas.width, y:canvas.height-60, w:30, h:60 });
   }
-  obstacles.forEach(o => o.x -= 6);
+  obstacles.forEach(o => o.x -= Math.max(6, canvas.width/150));
 
   // Проверка коллизий
   for (let o of obstacles) {
@@ -66,7 +83,7 @@ function update() {
 }
 
 function draw() {
-  ctx.clearRect(0,0,800,300);
+  ctx.clearRect(0,0,canvas.width,canvas.height);
 
   // Динозавр
   ctx.fillStyle = "green";
@@ -84,7 +101,7 @@ function draw() {
   if (gameOver) {
     ctx.fillStyle="black";
     ctx.font="30px Arial";
-    ctx.fillText("Game Over! Score: " + score, 250, 150);
+    ctx.fillText("Game Over! Score: " + score, canvas.width/2-100, canvas.height/2);
   }
 }
 
@@ -102,7 +119,9 @@ function endGame() {
   }
 }
 
+// Управление: пробел (ПК) + тап (телефон)
 window.addEventListener("keydown", e => { if (e.code==="Space") jump(); });
+window.addEventListener("touchstart", () => jump());
 
 loop();
 </script>
