--- a/index.html
+++ b/index.html
@@ -4,123 +4,182 @@
   <meta charset="UTF-8">
   <title>Dino Game</title>
   <style>
-    body { margin: 0; overflow: hidden; background: #f5f5f5; }
-    canvas { display: block; margin: auto; background: #fff; border: 2px solid #000; touch-action: none; }
+    body { margin:0; overflow:hidden; background:#cceeff; position:relative; }
+    canvas { display:block; margin:auto; background:#cceeff; border:2px solid #000; touch-action:none; }
+    #startBtn {
+      position:absolute;
+      bottom:20px; right:20px;
+      padding:12px 24px;
+      font-size:20px;
+      z-index:1000;
+      cursor:pointer;
+      border:none;
+      border-radius:5px;
+      background:#4CAF50;
+      color:white;
+    }
   </style>
 </head>
 <body>
 <canvas id="game"></canvas>
+<button id="startBtn">START</button>
 
-<!-- Telegram SDK -->
 <script src="https://telegram.org/js/games.js"></script>
 
 <script>
 const canvas = document.getElementById("game");
 const ctx = canvas.getContext("2d");
+const startBtn = document.getElementById("startBtn");
+let gameStarted = false;
 
+let canvasWidth, canvasHeight;
+let dino = {}, obstacleTemplate = {};
+let obstacles = [], clouds = [];
+let frame = 0, score = 0, gameOver = false, gameSpeed = 2;
+
+// Настройка размеров и пропорций
 function resizeCanvas() {
-  canvas.width = window.innerWidth;
-  canvas.height = window.innerHeight;
+    canvasWidth = window.innerWidth;
+    canvasHeight = window.innerHeight;
+    if(canvasHeight > canvasWidth) canvasHeight = canvasWidth * 0.5; // горизонтальная ориентация
+
+    canvas.width = canvasWidth;
+    canvas.height = canvasHeight;
+
+    // Динозавр
+    dino.w = canvasHeight * 0.12;
+    dino.h = canvasHeight * 0.12;
+    dino.x = canvasWidth * 0.05;
+    dino.y = canvasHeight - dino.h - canvasHeight*0.05;
+    dino.vy = 0;
+    dino.jumping = false;
+
+    // Препятствия
+    obstacleTemplate.w = canvasHeight * 0.09;
+    obstacleTemplate.h = canvasHeight * 0.18;
+
+    // Облака
+    clouds = [];
+    for(let i=0;i<5;i++){
+        clouds.push({
+            x: Math.random()*canvasWidth,
+            y: Math.random()*canvasHeight*0.3,
+            w: canvasHeight*0.1,
+            h: canvasHeight*0.05,
+            speed: Math.random()*0.5+0.2
+        });
+    }
 }
 window.addEventListener("resize", resizeCanvas);
 resizeCanvas();
 
-// Динозавр
-let dino = { 
-  x:50, 
-  y:canvas.height-80, 
-  w:40, 
-  h:40, 
-  vy:0, 
-  jumping:false 
-};
-let gravity = 0.6;
-let jumpPower = -12;
-
-// Препятствия
-let obstacles = [];
-let frame = 0;
-
-// Счёт
-let score = 0;
-let gameOver = false;
-
-function jump() {
-  if (!dino.jumping) {
-    dino.vy = jumpPower;
-    dino.jumping = true;
-  }
-}
-
-function update() {
-  if (gameOver) return;
-
-  // Физика динозавра
-  dino.y += dino.vy;
-  dino.vy += gravity;
-  if (dino.y >= canvas.height-80) { 
-    dino.y = canvas.height-80; 
-    dino.jumping = false; 
-  }
-
-  // Создание препятствий
-  if (frame % 100 === 0) {
-    obstacles.push({ x:canvas.width, y:canvas.height-60, w:30, h:60 });
-  }
-  obstacles.forEach(o => o.x -= Math.max(6, canvas.width/150));
-
-  // Проверка коллизий
-  for (let o of obstacles) {
-    if (dino.x < o.x + o.w && dino.x + dino.w > o.x &&
-        dino.y < o.y + o.h && dino.y + dino.h > o.y) {
-      endGame();
+// Прыжок
+function jump(){
+    if(!dino.jumping){
+        dino.vy = -canvasHeight*0.045;
+        dino.jumping = true;
     }
-  }
-
-  // Увеличение счёта
-  score++;
-  frame++;
 }
 
-function draw() {
-  ctx.clearRect(0,0,canvas.width,canvas.height);
+// Старт игры
+startBtn.addEventListener("click", () => {
+    startBtn.style.display = "none";
+    gameStarted = true;
+});
 
-  // Динозавр
-  ctx.fillStyle = "green";
-  ctx.fillRect(dino.x,dino.y,dino.w,dino.h);
+// Обновление игры
+function update(){
+    if(!gameStarted || gameOver) return;
 
-  // Препятствия
-  ctx.fillStyle = "red";
-  obstacles.forEach(o => ctx.fillRect(o.x,o.y,o.w,o.h));
+    // Динозавр
+    dino.y += dino.vy;
+    dino.vy += 0.6;
+    if(dino.y >= canvasHeight - dino.h - canvasHeight*0.05){
+        dino.y = canvasHeight - dino.h - canvasHeight*0.05;
+        dino.jumping = false;
+    }
 
-  // Счёт
-  ctx.fillStyle = "black";
-  ctx.font = "20px Arial";
-  ctx.fillText("Score: " + score, 20, 30);
+    // Препятствия
+    if(frame % 100 === 0){
+        obstacles.push({
+            x: canvasWidth,
+            y: canvasHeight - obstacleTemplate.h - canvasHeight*0.05,
+            w: obstacleTemplate.w,
+            h: obstacleTemplate.h
+        });
+    }
+    obstacles.forEach(o => o.x -= gameSpeed);
+    obstacles = obstacles.filter(o => o.x + o.w > 0);
 
-  if (gameOver) {
+    // Коллизии
+    for(let o of obstacles){
+        if(dino.x < o.x + o.w && dino.x + dino.w > o.x &&
+           dino.y < o.y + o.h && dino.y + dino.h > o.y){
+            endGame();
+        }
+    }
+
+    // Облака
+    clouds.forEach(c => {
+        c.x -= c.speed;
+        if(c.x + c.w < 0) c.x = canvasWidth;
+    });
+
+    // Очки и ускорение
+    score++;
+    gameSpeed += 0.001;
+    frame++;
+}
+
+// Рисуем сцену
+function draw(){
+    ctx.clearRect(0,0,canvasWidth,canvasHeight);
+
+    // Облака
+    ctx.fillStyle="white";
+    clouds.forEach(c => ctx.fillRect(c.x,c.y,c.w,c.h));
+
+    // Земля
+    ctx.fillStyle="#654321";
+    ctx.fillRect(0,canvasHeight-20,canvasWidth,20);
+
+    // Динозавр
+    ctx.fillStyle="green";
+    ctx.fillRect(dino.x,dino.y,dino.w,dino.h);
+
+    // Препятствия
+    ctx.fillStyle="red";
+    obstacles.forEach(o => ctx.fillRect(o.x,o.y,o.w,o.h));
+
+    // Счёт
     ctx.fillStyle="black";
-    ctx.font="30px Arial";
-    ctx.fillText("Game Over! Score: " + score, canvas.width/2-100, canvas.height/2);
-  }
+    ctx.font = `${canvasHeight*0.05}px Arial`;
+    ctx.fillText("Score: " + score, 20, canvasHeight*0.07);
+
+    if(gameOver){
+        ctx.fillStyle="black";
+        ctx.font=`${canvasHeight*0.07}px Arial`;
+        ctx.fillText("Game Over! Score: " + score, canvasWidth/2 - canvasWidth*0.3, canvasHeight/2);
+    }
 }
 
-function loop() {
-  update();
-  draw();
-  if (!gameOver) requestAnimationFrame(loop);
+// Игровой цикл
+function loop(){
+    update();
+    draw();
+    if(!gameOver) requestAnimationFrame(loop);
 }
 
-function endGame() {
-  gameOver = true;
-  // Отправляем результат в Telegram
-  if (window.TelegramGameProxy) {
-    TelegramGameProxy.postEvent("score", score);
-  }
+// Конец игры
+function endGame(){
+    gameOver = true;
+    if(window.TelegramGameProxy){
+        TelegramGameProxy.postEvent("score", score);
+    }
 }
 
-// Управление: пробел (ПК) + тап (телефон)
-window.addEventListener("keydown", e => { if (e.code==="Space") jump(); });
+// Управление
+window.addEventListener("keydown", e => { if(e.code==="Space") jump(); });
 window.addEventListener("touchstart", () => jump());
 
 loop();
